Removed unused commented methods in AttractionRepository