@@ -28,39 +28,15 @@ public class AttractionRepository {
                     getTagsForAttraction(rs.getInt("id"))
             );
 
-//    private List<TouristAttraction> attractions = new ArrayList<>(List.of(
-//            new TouristAttraction("SMK", "Museum for Kunst", "København", List.of(Tag.KUNST, Tag.MUSEUM)),
-//            new TouristAttraction("Odense Zoo", "Europas bedste zoo", "Odense", List.of(Tag.BØRNEVENLIG)),
-//            new TouristAttraction("Dyrehaven", "Naturpark med skovområder", "Kongens Lyngby", List.of(Tag.NATUR, Tag.GRATIS)),
-//            new TouristAttraction("Tivoli", "Forlystelsespark midt i Københavns centrum", "København", List.of(Tag.BØRNEVENLIG))
-//    ));
-
-//    public List<TouristAttraction> getAttractions() {
-//        return attractions;
-//    }
-
     public List<TouristAttraction> getAttractions() {
         return jdbc.query("SELECT * FROM tourist_attraction", rowMapper);
     }
-
-//    public TouristAttraction getAttractionFromName(String name) {
-//        for (TouristAttraction attraction : attractions) {
-//            if (attraction.getName().equalsIgnoreCase(name)) {
-//                return attraction;
-//            }
-//        }
-//        return null;
-//    }
 
     public TouristAttraction getAttractionFromName(String name) {
         List<TouristAttraction> list = jdbc.query(
                 "SELECT * FROM tourist_attraction WHERE name = ?", rowMapper, name);
         return list.isEmpty() ? null : list.getFirst();
     }
-
-//    public void saveAttraction(TouristAttraction attraction) {
-//        attractions.add(attraction);
-//    }
 
     public void saveAttraction(TouristAttraction attraction) {
         KeyHolder keyHolder = new GeneratedKeyHolder();
@@ -86,59 +62,18 @@ public class AttractionRepository {
         }
     }
 
-//    public void deleteAttraction(String name) {
-//        for (int i = 0; i < attractions.size(); i++) {
-//            if (attractions.get(i).getName().equalsIgnoreCase(name)) {
-//                attractions.remove(i);
-//                return;
-//            }
-//        }
-//    }
-
     public void deleteAttraction(String name) {
         jdbc.update("DELETE FROM tourist_attraction WHERE name = ?", name);
     }
-
-//    public void updateAttraction(TouristAttraction attraction) {
-//        for (int i = 0; i < attractions.size(); i++) {
-//            TouristAttraction existing = attractions.get(i);
-//            if (existing.getName().equalsIgnoreCase(attraction.getName())) {
-//                attractions.set(i, attraction);
-//                break;
-//            }
-//        }
-//    }
 
     public void updateAttraction(TouristAttraction attraction) {
         jdbc.update("UPDATE tourist_attraction SET description=?, city=? WHERE name=?",
                 attraction.getDescription(), attraction.getCity(), attraction.getName());
     }
 
-    //     public List<String> getCities() {
-    //        List<String> cities = new ArrayList<>();
-    //        for (TouristAttraction attraction : attractions) {
-    //            if (!cities.contains(attraction.getCity())) {
-    //                cities.add(attraction.getCity());
-    //            }
-    //        }
-    //        return cities;
-    //    }
-
     public List<String> getCities() {
         return jdbc.query("SELECT DISTINCT city FROM tourist_attraction", (rs, i) -> rs.getString("city"));
     }
-
-//    public List<Tag> getTags() {
-//        List<Tag> tags = new ArrayList<>();
-//        for (TouristAttraction attraction : attractions) {
-//            for (Tag tag : attraction.getTags()) {
-//                if (!tags.contains(tag)) {
-//                    tags.add(tag);
-//                }
-//            }
-//        }
-//        return tags;
-//    }
 
     public List<Tag> getTags() {
         return jdbc.query("SELECT name FROM tag", (rs, i) -> Tag.valueOf(rs.getString("name")));
@@ -151,6 +86,6 @@ public class AttractionRepository {
 
     private Integer getTagId(String tagName) {
         List<Integer> ids = jdbc.query("SELECT id FROM tag WHERE name = ?", (rs, i) -> rs.getInt("id"), tagName);
-        return ids.isEmpty() ? null : ids.get(0);
+        return ids.isEmpty() ? null : ids.getFirst();
     }
 }
